# wireguard-uapi

./: Cargo.toml  build.rs  nl.h
src/: lib.rs  main.rs  netlink.rs  wireguard.rs
src/netlink/: bindings.rs  generic.rs  recv.rs  rt.rs  send.rs
tests/: get_ifs.rs  get_set_peer.rs
