[package]
name = "wireguard-uapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", default-features = false, features = ["socket"] }
serde = { version = "1.0", features = ["derive"], optional = true }
mio = { version = "0.8.8", default-features = false, features = ["os-poll", "os-ext"], optional = true }
base64_light = { version = "=0.1.5", optional = true }

[features]
display = ["base64_light"]

[build-dependencies]
bindgen = "0.66.1"
